...
            "state": "translated",
            "value": "حدیث"
          }
        }
      }
    },
    "Read": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Read"
...
            "state": "translated",
            "value": "سات مجموعے عربی، انگریزی اور اردو میں"
          }
        }
      }
    },
    "Show both readers": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Show both readers"
...
            "state": "translated",
            "value": "بیعت"
          }
        }
      }
    },
    "Begin": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Begin"
...
            "state": "translated",
            "value": "مواد اور اسٹوریج"
          }
        }
      }
    },
    "Continue": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Continue"
...
            "state": "translated",
            "value": "30 سیکنڈ آگے"
          }
        }
      }
    },
    "Get Started": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Get Started"
...
            "state": "translated",
            "value": "ذکر کی یاد دہانیاں پانے کے لیے براہِ کرم iOS کی ترتیبات میں دارالعرفان کے لیے اطلاعات کی اجازت دیں۔"
          }
        }
      }
    },
    "Today": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Today"
...
            "state": "translated",
            "value": "میرا موجودہ مقام استعمال کریں"
          }
        }
      }
    },
    "Use My Location": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Use My Location"
...
